[package]
name = "basic-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
#
axum = '0.6'
httpc-test='0.1.1'
anyhow='1'
chrono = { version = "0.4.28", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tower-http = { version = "0.4.3", features = ["cors"] }
